--- a/config/000-default.conf
+++ b/config/000-default.conf
@@ -3,11 +3,22 @@
     ServerName eventmanagement.algharabli-group.work
     DocumentRoot /var/www/html/public
 
+    # Redirect HTTP to HTTPS
+    Redirect permanent / https://eventmanagement.algharabli-group.work/
+</VirtualHost>
+
+<VirtualHost *:443>
+    ServerAdmin webmaster@localhost
+    ServerName eventmanagement.algharabli-group.work
+    DocumentRoot /var/www/html/public
+
+    # SSL configuration
+    SSLEngine on
+    SSLCertificateFile /etc/letsencrypt/live/eventmanagement.algharabli-group.work/fullchain.pem
+    SSLCertificateKeyFile /etc/letsencrypt/live/eventmanagement.algharabli-group.work/privkey.pem
+
     <Directory /var/www/html/public>
         AllowOverride All
         Require all granted
     </Directory>
-
-    # Redirect HTTP to HTTPS
-    Redirect permanent / https://eventmanagement.algharabli-group.work/
 </VirtualHost>
