--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.8'
 
 services:
+  # Laravel app container
   app:
     build:
       context: .
@@ -8,9 +9,8 @@ services:
     container_name: eventmanagementsystem-app
     volumes:
       - .:/var/www/html
-    ports:
-      - "8080:80"   # Exposing HTTP port
-      - "8443:443" # Exposing HTTPS port
+    expose:
+      - "80"   # Exposing HTTP port internally for Apache to access
     depends_on:
       - db
     networks:
@@ -18,6 +18,7 @@ services:
     environment:
       - VIRTUAL_HOST=eventmanagement.algharabli-group.work
 
+  # MySQL database container
   db:
     image: mysql:8.0
     container_name: mysql_db
@@ -31,6 +32,32 @@ services:
     networks:
       - app-network
 
+  # Apache container with SSL enabled
+  apache:
+    image: httpd:latest
+    container_name: apache_server
+    volumes:
+      - ./src:/var/www/html
+      - ./apache-config/httpd.conf:/usr/local/apache2/conf/httpd.conf
+      - ./letsencrypt:/etc/letsencrypt  # Volume to store certs
+    networks:
+      - app-network
+    ports:
+      - "80:80"
+      - "443:443"
+    depends_on:
+      - app
+
+  # Certbot container for Let's Encrypt SSL certificates
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+    networks:
+      - app-network
+    volumes:
+      - ./letsencrypt:/etc/letsencrypt
+      - ./apache-config:/etc/apache2/sites-available
 
 networks:
   app-network:
