--- a/config/default-ssl.conf
+++ b/config/default-ssl.conf
@@ -5,8 +5,8 @@
         DocumentRoot /var/www/html/public
 
         SSLEngine on
-        SSLCertificateFile /etc/ssl/certs/server.crt
-        SSLCertificateKeyFile /etc/ssl/certs/server.key
+        SSLCertificateFile /etc/letsencrypt/live/eventmanagement.algharabli-group.work/fullchain.pem
+        SSLCertificateKeyFile /etc/letsencrypt/live/eventmanagement.algharabli-group.work/privkey.pem
 
         <Directory /var/www/html/public>
             AllowOverride All
