--- a/apache-config/000-default.conf
+++ b/apache-config/000-default.conf
@@ -1,12 +1,14 @@
-ServerName eventmanagement.algharabli-group.work
-
 <VirtualHost *:80>
     ServerAdmin webmaster@localhost
-    ServerName eventmanagement.algharabli-group.work
+    ServerName localhost
     DocumentRoot /var/www/html/public
 
     <Directory /var/www/html/public>
+        Options Indexes FollowSymLinks
         AllowOverride All
         Require all granted
     </Directory>
+
+    ErrorLog ${APACHE_LOG_DIR}/laravel-error.log
+    CustomLog ${APACHE_LOG_DIR}/laravel-access.log combined
 </VirtualHost>
